Minor style change for default nuget source description

--- a/config/config.html
+++ b/config/config.html
@@ -52,7 +52,7 @@
           </span>
           [[ item ]]
         </li>
-        <li ng-hide="config.packageSources.length"><em>No custom package sources specified. <code>nuget.org</code> will be used.</em></li>
+        <li ng-hide="config.packageSources.length"><em>No custom package sources specified.</em> <code>nuget.org</code> <em>will be used.</em></li>
       </ul>
     </div>
     <h4>AssemblyVersion Patching</h4>
